[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "medstat"
version = "0.1.0"
description = "Statistical analysis tool for medical research"
requires-python = ">=3.9"
dependencies = [
    "fastapi>=0.100",
    "uvicorn[standard]>=0.23",
    "numpy>=1.24",
    "scipy>=1.10",
    "statsmodels>=0.14",
    "pandas>=2.0",
    "scikit-learn>=1.3",
    "openpyxl>=3.1",
    "python-multipart>=0.0.6",
    "httpx>=0.24",
    "pydantic>=2.0",
]

[project.scripts]
medstat = "medstat.main:cli"

[tool.setuptools.packages.find]
where = ["."]
include = ["medstat*"]

[tool.setuptools.package-data]
"medstat" = ["static/*"]
